# one-page-binder

./: README.md  bug-report-and-fixes.md  index.html  next.config.mjs  ommwriter_improvements.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/about/: AboutClient.tsx  page.tsx
app/privacy/: PrivacyClientPage.tsx  page.tsx
app/terms/: page.tsx
components/: file-system-demo.tsx  logo.tsx  offline-indicator.tsx  private-share.tsx  pwa-install-prompt.tsx  pwa-update-prompt.tsx  qr-code-generator.tsx  tag-manager.tsx  tauri-native-fs.tsx  theme-provider.tsx
components/ui/: button.tsx  calendar.tsx  chart.tsx  command.tsx  form.tsx  menubar.tsx  sidebar.tsx
lib/: docx-export.ts  language.ts  tauri-api.ts  translation.ts  translations.ts
public/: manifest.json  offline.html  pwa-utils.js  robots.txt  sitemap.xml  sw.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BackgroundSelector.tsx  DocumentItem.tsx  FontSelector.tsx  Settings.tsx  Sidebar.tsx  Stats.tsx  Toolbar.tsx  WritingArea.tsx
src/contexts/: WritingContext.tsx
src/hooks/: useLocalStorage.ts
src/types/: index.ts
src/utils/: textUtils.ts
types/: react-svg.d.ts  tauri.d.ts
